--- a/src/app/components/Voting/Submit/Submit.css
+++ b/src/app/components/Voting/Submit/Submit.css
@@ -17,7 +17,7 @@
 }
 @media screen and (max-width: 425px) {
   .base {
-    padding: 6px;
+    padding: 4px;
   }
 }
 
