--- a/src/app/components/Voting/Vote.css
+++ b/src/app/components/Voting/Vote.css
@@ -55,9 +55,14 @@
     flex-direction: row;
   }
   .left, .right {
-    width: 49%;
     margin: 4px;
   }
   .right {
+    flex-grow: 2;
+    /*width: 66%;*/
+  }
+  .left {
+    flex-grow: 1;
+    /*width: 33%;*/
   }
 }
